--- a/TerraformCdkAws/appsettings.json
+++ b/TerraformCdkAws/appsettings.json
@@ -1,16 +1,9 @@
 {
   "TerraformContext": {
-    "OrgName": "wow",
-    "AppName": "akashic",
+    "OrgName": "text",
+    "AppName": "terraform-cdk-sample",
     "Environment": "dev",
-    "Region": "aae",
-    "BackendConfig": {
-      "BackendArm": "WOW-DEVTEST",
-      "BackendType": "Local",
-      "BackendResourceGroup": "wow-dev-terraform-tfstate",
-      "BackendStorageAccount": "terraformstatedevtest",
-      "BackendContainer": "akashic-infra"
-    }
+    "Region": "australiaeast"
   }
 
 }
