add access key and secret

--- a/TerraformCdkAws/appsettings.json
+++ b/TerraformCdkAws/appsettings.json
@@ -3,7 +3,9 @@
     "OrgName": "text",
     "AppName": "terraform-cdk-sample",
     "Environment": "dev",
-    "Region": "australiaeast"
+    "Region": "us-west-2",
+    "AccessKey": "",
+    "SecretKey": ""
   }
 
 }
