--- a/TerraformCdkAws/cdktf.out/manifest.json
+++ b/TerraformCdkAws/cdktf.out/manifest.json
@@ -1,11 +1,11 @@
 {
   "version": "0.14.1",
   "stacks": {
-    "test_stack": {
-      "name": "test_stack",
-      "constructPath": "test_stack",
-      "workingDirectory": "stacks\\test_stack",
-      "synthesizedStackPath": "stacks\\test_stack\\cdk.tf.json",
+    "mainstack": {
+      "name": "mainstack",
+      "constructPath": "mainstack",
+      "workingDirectory": "stacks\\mainstack",
+      "synthesizedStackPath": "stacks\\mainstack\\cdk.tf.json",
       "annotations": [],
       "dependencies": []
     }
